plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group 'dev.kingnaldo'
version '1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

shadowJar {
    manifest {
        attributes('Main-Class':'dev.kingnaldo.kingsbot.KingsBot')
        attributes('Multi-Release':'true')
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

repositories {
    jcenter()
}

dependencies {
    implementation 'net.dv8tion:JDA:4.1.1_156'
    implementation 'io.github.cdimascio:java-dotenv:5.2.1'

    implementation 'com.sedmelluq:lavaplayer:1.3.50'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.3'

    implementation 'com.google.api-client:google-api-client:1.30.10'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200618-1.30.9'

    implementation 'com.google.code.gson:gson:2.8.6'

    implementation 'se.michaelthelin.spotify:spotify-web-api-java:6.3.0'
}